test/fixtures/bad/tag_with_extra_arg.roy
data A = B | C
let x = B 1 2
console.log x
